--- a/res/layout/activity_attendence.xml
+++ b/res/layout/activity_attendence.xml
@@ -117,6 +117,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
+                    android:gravity="center_horizontal"
                     android:padding="5dp" >
 
                     <Button
