--- a/res/layout/activity_spinner_json.xml
+++ b/res/layout/activity_spinner_json.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+ 		android:background="#000000"
         android:layout_marginTop="75dp" />
 
 </RelativeLayout>
