--- a/res/layout/activity_alarm_report.xml
+++ b/res/layout/activity_alarm_report.xml
@@ -52,7 +52,7 @@
                 android:layout_height="match_parent" >
 
                  <TextView
-                     android:id="@+id/textView1"
+                     android:id="@+id/textViewResult"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="20dp"
