--- a/res/layout/activity_all_asg_with_stud_id.xml
+++ b/res/layout/activity_all_asg_with_stud_id.xml
@@ -29,7 +29,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="             All Test   "
+                    android:text="        All Test   "
                     android:padding="10dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#FF00FF" />
@@ -45,15 +45,16 @@
                     android:id="@+id/textViewStudentId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.2"
                     android:text="Student Id"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <Spinner
-                    android:id="@+id/spinnerStudentId"
-                    android:layout_width="wrap_content"
+                <EditText 
+                    android:id="@+id/studentid"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1.5"
+                    android:inputType="text"/>
             </TableRow>
 
             
